# LinkUp

./: .gitignore  Cargo.toml  README.md  config.toml.example  install.sh  linkup.service
.github/workflows/: auto-release.yml  ci.yml
src/: main.rs
src/config/: loader.rs  mod.rs  models.rs
src/ngrok/: manager.rs  mod.rs  process.rs  tunnel.rs
src/webhook/: discord.rs  generic.rs  mod.rs  notifier.rs
